@@ -39,6 +39,8 @@ typedef enum {
    KEYS_HOME,
    KEYS_SCREEN_UP,
    KEYS_SCREEN_DOWN,
+   KEYS_SCREEN_LEFT,
+   KEYS_SCREEN_RIGHT,
    KEYS_LINE_UP,
    KEYS_LINE_DOWN,
    KEYS_LEFT,
